# patterns

builder/: CMakeLists.txt  Director.cpp  Director.h  Enums.h  main.cpp  Диаграмма без названия.drawio
builder/builders/: BaseCarBuilder.cpp  BaseCarBuilder.h  BusBuilder.cpp  BusBuilder.h  BusPassengerBuilder.cpp  BusPassengerBuilder.h  PassengerBuilder.cpp  PassengerBuilder.h  TaxiBuilder.cpp  TaxiBuilder.h  TaxiPassengerBuilder.cpp  TaxiPassengerBuilder.h
builder/cars/: Bus.cpp  Bus.h  Car.cpp  Car.h  Taxi.cpp  Taxi.h
builder/drivers/: BusDriver.cpp  BusDriver.h  Driver.cpp  Driver.h  TaxiDriver.cpp  TaxiDriver.h
builder/passengers/: BusPassenger.cpp  BusPassenger.h  Passenger.cpp  Passenger.h  TaxiPassenger.cpp  TaxiPassenger.h
composite/: CMakeLists.txt  Component.h  Composite.h  Primitives.h  main.cpp
interpreter/: .gitignore  CMakeLists.txt  Interpreter.h  main.cpp
observer/: CMakeLists.txt  Observer.h  main.cpp
proxy/: CMakeLists.txt  Proxy.h  ProxyImage.h  RealImage.h  main.cpp
